syntax = "proto3";

package demo;

/*
 * Returns a greeting for the given person optionally including a custom message.
 */
service DistributeTask {
    rpc askForTask(Task) returns (Task) {}
    rpc returnResult(Task) returns (Task) {}
}

message Task {
    uint32 task_number = 1;
    int32 dimention = 2;
    float value = 3;
}